--- a/cluckies/package.json
+++ b/cluckies/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^5.1.0",
     "moralis": "^2.17.0",
     "next": "13.1.6",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
